--- a/contactme.html
+++ b/contactme.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<html>
+<head>
+    <title> Hello everyone! 2018 </title>
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+</head>
+<body>
 
+
+</body>
+</html>
