--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <ul id="topmenu">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#">Memes</a></li>
-                <li><a href="#">Contact me</a></li>
+                <li><a href="contactme.html">Contact me</a></li>
                 <li><a href="https://github.com/ThogeTG/learning-web">Repository</a></li>
             </ul>
 
