--- a/contactme.html
+++ b/contactme.html
@@ -1,9 +1,34 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <html>
 <head>
     <title> Hello everyone! 2018 </title>
     <link href="css/style.css" rel="stylesheet" type="text/css">
+    <script>
+        function validateForm() {
+            if (document.forms["myForm"]["firstname"].value == null || document.forms["myForm"]["firstname"].value == "")
+            {
+                alert("First Name must be filled out");
+                return false;
+            }
+            if (document.forms["myForm"]["lastname"].value == null || document.forms["myForm"]["lastname"].value == "")
+            {
+                alert("Last Name must be filled out");
+                return false;
+            }
+            if (document.forms["myForm"]["phone"].value == null || document.forms["myForm"]["phone"].value == "")
+            {
+                alert("Phone must be filled out");
+                return false;
+            }
+            if (document.forms["myForm"]["email"].value == null || document.forms["myForm"]["email"].value == "")
+            {
+                alert("Email must be filled out");
+                return false;
+            }
+            return true;
+        }
+    </script>
 </head>
 <body>
     <div id="wrap">
@@ -13,8 +38,9 @@
             <li><a href="contactme.html">Contact me</a></li>
             <li><a href="https://github.com/ThogeTG/learning-web">Repository</a></li>
         </ul>
-
-        <table style="width: 40%">
+        <p> </p>
+        <p> </p>
+        <table style="width: 25%">
             <tr>
                 <th colspan="2">My contact information</th>
             </tr>
@@ -35,15 +61,15 @@
             </tr>
         </table>
 
-        <form span style="padding-top:40px">
+        <form name="myForm" onsubmit="return validateForm()" span style="padding-top: 2%">
             <table>
                 <tr>
                     <td align="right">First Name:</td>
-                    <td align="left"><input type="text" name="first" /></td>
+                    <td align="left"><input type="text" name="firstname" /></td>
                 </tr>
                 <tr>
                     <td align="right">Last Name:</td>
-                    <td align="left"><input type="text" name="last" /></td>
+                    <td align="left"><input type="text" name="lastname" /></td>
                 </tr>
                 <tr>
                     <td align="left">Male</td>
@@ -66,9 +92,12 @@
                     <td align="left"><input type="submit" value="Submit"></td>
                 </tr>
             </table>
-        </form>
-
+        </form><br><br>
+        <p>Or then you can contact me directly through this message.</p>
+        <textarea rows="10" cols="50"></textarea>
     </div>
-
+    <div id="footer">
+        Page created by Touko Niininen 30.11.2018
+    </div>
 </body>
 </html>
