--- a/contactme.html
+++ b/contactme.html
@@ -97,7 +97,7 @@
         <textarea rows="10" cols="50"></textarea>
     </div>
     <div id="footer">
-        Page created by Touko Niininen 30.11.2018
+        Page created by Touko Niininen 11-12.2018
     </div>
 </body>
 </html>
