--- a/index.html
+++ b/index.html
@@ -88,16 +88,16 @@
             <p>
                 <ol>
                     <li>My life is like meme pictures.</li>
-                    <li>You either are gonna love or hate it.</li>
+                    <li>You either are gonna love it or hate it.</li>
                     <li>I should someday make a real portfolio. And not be silly with these memes.</li>
                 </ol>
 
                 <ul>
                     <li>My life is like meme pictures.</li>
-                    <li>You either are gonna love or hate it.</li>
+                    <li>You either are gonna love it or hate it.</li>
                     <li>I should someday make a real portfolio. And not be silly with these memes.</li>
                 </ul>
-                This is my first paragraph. Write here efegeg.
+                This is my first paragraph. I should write a little novel here.
             </p>
 
             <a href="" target="_blank">This is a link to this web page's reposity.</a> <br>
@@ -114,20 +114,18 @@
             <iframe width="460" height="215" src="https://www.youtube.com/embed/N1ZgIkJ0bvY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
 
             <h2>Drag&drop</h2>
-            <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"> 1
-                <img id="drag1" src="images/dragdrop.png" draggable="true" ondragstart="drag(event)" width="50" height="50">
+            <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img id="drag1" src="images/dragdrop.png" draggable="true" ondragstart="drag(event)" width="100" height="70">
             </div>
-            
-             <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"> 2 
-            
-             </div>
+
+            <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)">
+
+            </div>
         </div>
         <div id="footer">
             Page created by Touko Niininen 11-12.2018
         </div>
         <h2 id="#"></h2>
     </div>
-    <button onclick="draw(0, 0)">Draw</button>
-    <canvas id="canvas" width="550" height="400"></canvas>
 </body>
 </html>
