Small style changes.

--- a/index.html
+++ b/index.html
@@ -63,18 +63,15 @@
 </head>
 <body>
     <div id="wrap">
-        <div id="topbar">
+        <ul id="topmenu">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">Memes</a></li>
+            <li><a href="contactme.html">Contact me</a></li>
+            <li><a href="https://github.com/ThogeTG/learning-web">Repository</a></li>
+            <li><button onclick="showLocation()" style="width:100px; height:20px">Location</button></li>
+        </ul>
 
-            <ul id="topmenu">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Memes</a></li>
-                <li><a href="contactme.html">Contact me</a></li>
-                <li><a href="https://github.com/ThogeTG/learning-web">Repository</a></li>
-                <li><button onclick="showLocation()"></button>Click</li>
-            </ul>
-
-        </div>
-
+        <p></p>
         <img src="images/meme.jpg" alt="meme picture">
 
         <div id="mainpage">
